WindowsQPA: Remove unused GDIPlus include from qwindowswindow.cpp

GDIPlus is not used anymore to draw the custom titlebar, therefore the
gdiplus include can be removed.

Fixes: QTBUG-139653
Pick-to: 6.9
Change-Id: Id80b9d58bd6729dad8a4a428333e41d41aec5cd0
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>
(cherry picked from commit e6f8cc8598bcce571891d90dfd1dde7ccb20e7ea)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>